--- a/Education.html
+++ b/Education.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Yuxin Chen</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Education.html">Education</a></div>
+<div class="menu-item"><a href="Education.html">Experiences</a></div>
 <div class="menu-item"><a href="Group.html">Group</a></div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="Publications_year.html">Publications</a></div>
@@ -33,25 +33,41 @@
   ga('send', 'pageview');
 
 </script>
-<h1>Education / Experience</h1>
+<h1>Appointments and Education </h1>
+<h2>University of Pennsylvania (01/2022 &ndash; present)</h2>
+<ul>
+<li><p>Associate Professor of Statistics and Data Science</p>
+</li>
+</ul>
+<h2>Princeton University (02/2017 &ndash; 12/2021)</h2>
+<ul>
+<li><p>Assistant Professor of Electrical and Computer Engineering </p>
+</li>
+<li><p>Associated Faculty of Computer Science</p>
+</li>
+<li><p>Associated Faculty of Applied and Computational Mathematics</p>
+</li>
+<li><p>Associated Faculty of the Center for Statistics and Machine Learning</p>
+</li>
+</ul>
 <h2>Stanford University</h2>
 <ul>
 <li><p>Post-doc.: Statistics (01/2015 &ndash; 01/2017)
 </p>
 <ul>
-<li><p><i>Advisor: <a href="http://statweb.stanford.edu/~candes/">Emmanuel J. Candès</a></i></p>
+<li><p>Advisor: <a href="http://statweb.stanford.edu/~candes/">Emmanuel J. Candès</a></p>
 </li>
 </ul>
 
 </li>
 </ul>
 <ul>
-<li><p>Ph.D.: Electrical Engineering (06/2010 &ndash; 12/2014)
+<li><p>Ph.D.: Electrical Engineering (06/2010 &ndash; 01/2015)
 </p>
 <ul>
-<li><p><i>Advisor: <a href="http://ee.stanford.edu/~andrea">Andrea J. Goldsmith</a></i></p>
+<li><p>Advisor: <a href="http://ee.stanford.edu/~andrea">Andrea J. Goldsmith</a></p>
 </li>
-<li><p><i>Dissertation: <a href="publications/thesis_YuxinChen.pdf">Subsampling in Information Theory and Data Processing</a></i></p>
+<li><p>Dissertation: <a href="publications/thesis_YuxinChen.pdf">Subsampling in Information Theory and Data Processing</a></p>
 </li>
 </ul>
 
@@ -60,7 +76,7 @@
 <ul>
 <li><p>M.S.:   Statistics (04/2011 &ndash; 12/2013)</p>
 </li>
-<li><p>Ph.D. Minor: Management Science and Engineering</p>
+<li><p>Ph.D. Minor: Management Science and Engineering (06/2010 – 01/2015)</p>
 </li>
 </ul>
 <h2>University of Texas at Austin </h2>
@@ -86,7 +102,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:27:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-26 20:41:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
