--- a/Publications_year.html
+++ b/Publications_year.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Yuxin Chen</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Education.html">Education</a></div>
+<div class="menu-item"><a href="Education.html">Experiences</a></div>
 <div class="menu-item"><a href="Group.html">Group</a></div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="Publications_year.html">Publications</a></div>
@@ -52,6 +52,13 @@
 </p>
 </td></tr></table>
 
+<h2>2022</h2>
+<ol>
+<li><p><b>MagNet: an Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
+H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
+IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
+</li>
+</ol>
 <h2>2021</h2>
 <ol>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
@@ -109,7 +116,10 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 11, pp. 7380-7419, Nov. 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a></p>
+<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>MagNet: A Machine Learning Framework for Magnetic Core Loss Modeling</b> <br /> H. Li, S. R. Lee, M. Luo, C. R. Sullivan, <u>Y. Chen</u>, M. Chen, <i>IEEE Workshop on Control and Modeling of Power Electronics (COMPEL)</i>, 2020. <a href="https://ieeexplore.ieee.org/document/9265869">[paper]</a></p>
 </li>
 </ol>
 <h2>2019</h2>
@@ -228,7 +238,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:27:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-26 20:41:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
