--- a/Teaching.html
+++ b/Teaching.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Yuxin Chen</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Education.html">Education</a></div>
+<div class="menu-item"><a href="Education.html">Experiences</a></div>
 <div class="menu-item"><a href="Group.html">Group</a></div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="Publications_year.html">Publications</a></div>
@@ -73,7 +73,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:27:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-26 20:41:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
