--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Yuxin Chen</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Education.html">Education</a></div>
+<div class="menu-item"><a href="Education.html">Experiences</a></div>
 <div class="menu-item"><a href="Group.html">Group</a></div>
 <div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="Publications_year.html">Publications</a></div>
@@ -39,15 +39,15 @@
 
 <table class="imgtable"><tr><td>
 <img src="images/photo_Dec2019.jpg" alt="alt text" width="200 px" height="IMGLINKTARGET" />&nbsp;</td>
-<td align="left"><p>I am an assistant professor of <a href="http://ece.princeton.edu/">Electrical and Computer Engineering</a>, and an associated faculty member of <a href="http://www.cs.princeton.edu/">Computer Science</a>, <a href="https://www.pacm.princeton.edu/">Applied and Computational Mathematics</a>, and the <a href="https://csml.princeton.edu/">Center for Statistics and Machine Learning</a> at Princeton University. 
+<td align="left"><p>I will join the <a href="https://statistics.wharton.upenn.edu/"> Department of Statistics and Data Science</a> at the Wharton School at the University of Pennsylvania in Jan. 2022.  
+I have been an assistant professor of <a href="http://ece.princeton.edu/">Electrical and Computer Engineering</a>, and an associated faculty member of<a href="https://www.cs.princeton.edu/"> Computer Science</a> and <a href="https://www.pacm.princeton.edu/">Applied and Computational Mathematics</a> at Princeton University from 2017 to 2021. 
+Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to 2017, and obtained my Ph.D. in Electrical Engineering at Stanford University in Jan 2015. 
 </p>
-<p>Prior to joining Princeton in Spring 2017, I was a postdoctoral scholar in the Department of Statistics at Stanford University supervised by Prof. <a href="http://statweb.stanford.edu/~candes/">Emmanuel Candès</a>.  I completed my Ph.D. in Electrical Engineering at Stanford University in Fall 2014, under the supervision of  Prof. <a href="http://ee.stanford.edu/~andrea">Andrea Goldsmith</a>. 
-</p>
-<p><b>Research areas</b>: mathematical data science, statistics, reinforcement learning, optimization, information theory,  and their applications to medical imaging and computational biology.</p>
+<p><b>Research areas</b>: mathematical data science, statistics, reinforcement learning, optimization, information theory,  and their applications to medical imaging, power electronics, and computational biology.</p>
 <p><b>Contact:</b> <br />
-C330, Engineering Quad <br />
-Princeton University, Princeton, NJ 08544 <br /></p>
-<p>Email: yuxin dot chen at princeton dot edu</p>
+Academic Research Building <br />
+265 South 37th Street, Philadelphia, PA 19104 <br /></p>
+<p>Email: yuxinc at wharton dot upenn dot edu</p>
 </td></tr></table>
 
 <h2>Openings</h2>
@@ -60,25 +60,23 @@ statistics, optimization and reinforcement learning. </p>
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li>I will join  Department of Statistics and Data Science at Wharton School, UPenn in January 2022.</li>
-</ul>
-<ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.</li>
 </ul>
 <ul>
     <li><a href="publications/NPG_reg.pdf"> Our paper on natural policy gradient methods</a> was selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. Congratulations, Shicong and Chen!</li>
 </ul> 
+<ul>
+    <li>I received the 2021 Princeton SEAS junior faculty award.</li>
+</ul>
 <br>
 </p>
 </td></tr></table>
 
-<h2>Teaching</h2>
+<h2>Courses I have developed</h2>
 <ul>
-<li><p>Fall 2020: <a href="ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> <br /></p>
+<li><p>Fall 2020: <a href="ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> (Princeton) <br /> </p>
 </li>
-<li><p>Fall 2020: ELE201: Information and Signals <br /></p>
-</li>
-<li><p>Fall 2019: <a href="ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton Engineering Commendation List for Outstanding Teaching) <br /></p>
+<li><p>Fall 2019: <a href="ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton)  <br /></p>
 </li>
 </ul>
 <h2>Selected recent papers</h2>
@@ -167,7 +165,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:27:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-26 20:41:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
