--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 
 <h2>2022</h2>
 <ol>
-<li><p><b>MagNet: an Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
+<li><p><b>MagNet: An Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
 H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
 IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
 </li>
@@ -238,7 +238,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-26 21:00:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-26 21:04:51 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
