--- a/Education.html
+++ b/Education.html
@@ -38,6 +38,8 @@
 <ul>
 <li><p>Associate Professor of Statistics and Data Science</p>
 </li>
+<li><p>Associate Professor of Electrical and Systems Engineering (secondary appointment)</p>
+</li>
 </ul>
 <h2>Princeton University (02/2017 &ndash; 12/2021)</h2>
 <ul>
@@ -102,7 +104,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-03 13:23:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-05 09:18:22 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
