--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </p>
 <p><b>Research areas</b>: mathematical data science, statistics, reinforcement learning, optimization, information theory,  and their applications to medical imaging, power electronics, and computational biology.</p>
 <p><b>Contact:</b> <br />
-Academic Research Building <br />
+313 Academic Research Building <br />
 265 South 37th Street, Philadelphia, PA 19104 <br /></p>
 <p>Email: yuxinc at wharton dot upenn dot edu</p>
 </td></tr></table>
@@ -165,7 +165,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-05 09:18:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-05 15:05:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
