--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </td></tr></table>
 
 <h2>Openings</h2>
-<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in the general areas of 
-statistics, optimization and reinforcement learning. </p>
+<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly reinforcement learning),   statistics, and optimization. </p>
 <h2>Recent news</h2>
 
 <table class="imgtable"><tr><td>
@@ -165,7 +164,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-05 15:05:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-05 21:20:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
