--- a/Teaching.html
+++ b/Teaching.html
@@ -34,6 +34,13 @@
 
 </script>
 <h1>Teaching</h1>
+<h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp University of Pennsylvania</h2>
+<ul>
+<li><p>Spring 2022: <a href="stat991_math_data/index.html">Mathematics of High-Dimensional Data (STAT991-302)</a></p>
+</li>
+<li><p>Spring 2022: Convex Optimization For Statistics And Data Science (STAT481, STAT581, OIDD481, OIDD581)</p>
+</li>
+</ul>
 <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Princeton University</h2>
 <ul>
 <li><p>Fall 2020: <a href="ele520_math_data/index.html">Mathematics of Data Science (ELE520)</a></p>
@@ -73,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-05 21:20:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-09 11:20:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
