--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </p>
 </td></tr></table>
 
-<h2>Courses I have developed</h2>
+<h2>Topic courses I have developed</h2>
 <ul>
+<li><p>Spring 2022: <a href="stat991_math_data/index.html">STAT991-302: Mathematics of High-Dimensional Data</a> (UPenn) <br /></p>
+</li>
 <li><p>Fall 2020: <a href="ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> (Princeton) <br /> </p>
 </li>
 <li><p>Fall 2019: <a href="ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton)  <br /></p>
@@ -164,7 +166,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-09 11:20:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-09 11:22:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
