--- a/stat991_math_data/project.html
+++ b/stat991_math_data/project.html
@@ -134,7 +134,9 @@ either individually or in groups of two:</p>
 <li><p>&lsquo;&lsquo;Universal Approximation Bounds for Superpositions of a Sigmoidal Function,&rsquo;&rsquo; A. Barron,  <i>IEEE Transactions on Information theory</i>, 1993. </p>
 </li>
 <li><p>&lsquo;&lsquo;Gradient Descent on Neural Networks Typically Occurs at the Edge of Stability,&rsquo;&rsquo; 
-J. Cohen, S. Kaur, Y. Li, J. Z. Kolter, A. Talwalkar, 2021. </p>
+J. Cohen, S. Kaur, Y. Li, J. Z. Kolter, A. Talwalkar, 2021.</p>
+</li>
+<li><p>&lsquo;&lsquo;Inference for Heteroskedastic PCA with Missing Data,&rsquo;&rsquo; Y. Yan, Y. Chen, J. Fan, 2021.  </p>
 </li>
 <li><p>&lsquo;&lsquo;A Theoretical Analysis of Contrastive Unsupervised Representation Learning,&rsquo;&rsquo; S. Arora, H. Khandeparkar, M. Khodak, O. Plevrakis, N. Saunshi, <i>International Conference on Machine Learning</i>, 2019. </p>
 </li>
@@ -151,7 +153,7 @@ C. Wei, K. Shen, Y. Chen, T. Ma, 2020. </p>
 <p><i>You have the freedom to select a paper of your own interest (especially more practical papers), as long as it is related to the topics of this course. </i></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-09 11:14:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-09 23:10:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
