--- a/stat991_math_data/index.html
+++ b/stat991_math_data/index.html
@@ -39,7 +39,7 @@ sparse recovery and compressed sensing, low-rank matrix recovery, nonconvex matr
 <ul>
 <li><p>Zoom: January 12 and January 19</p>
 </li>
-<li><p>F36, Jon M. Huntsman Hall: starting from January 24</p>
+<li><p>F60, Jon M. Huntsman Hall: starting from January 24</p>
 </li>
 </ul>
 
@@ -54,9 +54,13 @@ sparse recovery and compressed sensing, low-rank matrix recovery, nonconvex matr
 </li>
 </ul>
 <h2>Announcements</h2>
+<ul>
+<li><p>1/23: We have a new classroom: F60, Jon M. Huntsman Hall.</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-09 23:10:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-24 21:56:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
