--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -27,10 +27,36 @@
 </div>
 <h2>Lecture notes</h2>
 <p>These lecture notes will be updated frequently; see also <a href="https://yuxinchen2020.github.io/ele520_math_data/index.html">lectures from previous offerings</a>.</p>
+<ul>
+<li><p><a href="lectures/spectral_method.pdf">Spectral methods</a></p>
+<ul>
+<li><p>Reading: <a href="https://arxiv.org/abs/2012.08496">Spectral methods for data science: A statistical perspective</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/matrix_concentration.pdf">Matrix concentration inequalities</a></p>
+<ul>
+<li><p>Reading: <a href="https://arxiv.org/abs/1501.01571">An introduction to matrix concentration inequalities</a>
+
+
+
+
+
+
+
+
+
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
 <h2>Supplementary readings (not to be covered in class)</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-24 21:56:26 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-31 13:22:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
