--- a/stat991_math_data/project.html
+++ b/stat991_math_data/project.html
@@ -149,11 +149,13 @@ J. Cohen, S. Kaur, Y. Li, J. Z. Kolter, A. Talwalkar, 2021.</p>
 <li><p>&lsquo;&lsquo;Theoretical Analysis of Self-Training with Deep Networks on Unlabeled Data,&rsquo;&rsquo;
 C. Wei, K. Shen, Y. Chen, T. Ma, 2020. </p>
 </li>
+<li><p>&lsquo;&lsquo;Implicit Regularization Towards Rank Minimization in ReLU Networks,&rsquo;&rsquo; N. Timor, G. Vardi, O. Shamir, 2021.</p>
+</li>
 </ol>
 <p><i>You have the freedom to select a paper of your own interest (especially more practical papers), as long as it is related to the topics of this course. </i></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-31 13:22:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-01 10:15:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
