--- a/Group.html
+++ b/Group.html
@@ -38,13 +38,17 @@
 <ul>
 <li><p>Yanxi Chen (ECE PhD student at Princeton, co-advised with Vincent Poor)</p>
 </li>
+<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
+</li>
 <li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
 </li>
-<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
+<li><p><a href="https://ece.princeton.edu/people/eshaan-nichani">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan)</p>
 </li>
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (Postdoc, co-advised with Jason Lee)</p>
+</li>
+<li><p><a href="https://ece.princeton.edu/people/wenhao-zhan">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
@@ -71,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-09 11:22:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-01 13:29:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
