--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -35,9 +35,12 @@
 </li>
 <li><p><a href="lectures/matrix_concentration.pdf">Matrix concentration inequalities</a></p>
 <ul>
-<li><p>Reading: <a href="https://arxiv.org/abs/1501.01571">An introduction to matrix concentration inequalities</a>
-
-
+<li><p>Reading: <a href="https://arxiv.org/abs/1501.01571">An introduction to matrix concentration inequalities</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/large_scale_eigenvalue_problems.pdf">Large-scale eigenvalue problems (power method and Lanczos algorithm)</a></p>
+<ul>
+<li><p>Reading: <a href="http://web.mit.edu/ehliu/Public/sclark/Golub%20G.H.,%20Van%20Loan%20C.F.-%20Matrix%20Computations.pdf">Matrix computations, Chapter 9</a>
 
 
 
@@ -56,7 +59,7 @@
 <h2>Supplementary readings (not to be covered in class)</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-01 10:18:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-02 08:48:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
