--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -40,9 +40,14 @@
 </li>
 <li><p><a href="lectures/large_scale_eigenvalue_problems.pdf">Large-scale eigenvalue problems (power method and Lanczos algorithm)</a></p>
 <ul>
-<li><p>Reading: <a href="http://web.mit.edu/ehliu/Public/sclark/Golub%20G.H.,%20Van%20Loan%20C.F.-%20Matrix%20Computations.pdf">Matrix computations, Chapter 9</a>
-
-
+<li><p>Reading: <a href="http://web.mit.edu/ehliu/Public/sclark/Golub%20G.H.,%20Van%20Loan%20C.F.-%20Matrix%20Computations.pdf">Matrix computations, Chapter 9</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/tensor_decomposition.pdf">Tensor decomposition (last updated: 10/8)</a></p>
+<ul>
+<li><p>Reading: <a href="http://jmlr.org/papers/v15/anandkumar14b.html">Tensor decompositions for learning latent variable models</a></p>
+</li>
+<li><p>Reading: <a href="https://arxiv.org/abs/2012.08496">Spectral methods for data science: A statistical perspective (Section 3.9)</a>
 
 
 
@@ -59,7 +64,7 @@
 <h2>Supplementary readings (not to be covered in class)</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-02 08:48:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-14 16:03:35 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
