--- a/stat991_math_data/project.html
+++ b/stat991_math_data/project.html
@@ -35,7 +35,7 @@ either individually or in groups of two:</p>
 </ul>
 <p>There are 2 milestones / deliverables to help you through the process.</p>
 <ol>
-<li><p><b>Proposal</b> (due Feb. 20). Submit a short report (no more than 1 page) stating the papers you plan to survey or the research problems that you plan to work on. Describe why they are important or interesting, and provide some appropriate references. If you elect to do original research, please do not propose an overly ambitious project that cannot be completed by the end of the semester, and do not be too lured by generality. Focus on the simplest scenarios that can capture the issues you’d like to address.
+<li><p><b>Proposal</b> (due Feb. 27). Submit a short report (no more than 1 page) stating the papers you plan to survey or the research problems that you plan to work on. Describe why they are important or interesting, and provide some appropriate references. If you elect to do original research, please do not propose an overly ambitious project that cannot be completed by the end of the semester, and do not be too lured by generality. Focus on the simplest scenarios that can capture the issues you’d like to address.
 </p>
 </li>
 <li><p><b>A written report</b> (due May 8). You are expected to submit a final project report &#8201;&mdash;&#8201; up to 5 pages with unlimited appendix &#8201;&mdash;&#8201; summarizing your findings and contributions. You must turn in an electronic copy. </p>
@@ -153,11 +153,13 @@ C. Wei, K. Shen, Y. Chen, T. Ma, 2020. </p>
 </li>
 <li><p>&lsquo;&lsquo;The Implicit Bias of Benign Overfitting,&rsquo;&rsquo; O. Shamir, 2022.</p>
 </li>
+<li><p>&lsquo;&lsquo;Minimax Regret Optimization for Robust Machine Learning under Distribution Shift,&rsquo;&rsquo; A. Agarwal, T. Zhang, 2022. </p>
+</li>
 </ol>
 <p><i>You have the freedom to select a paper of your own interest (especially more practical papers), as long as it is related to the topics of this course. </i></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-14 16:03:35 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-14 16:19:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
