--- a/Group.html
+++ b/Group.html
@@ -40,7 +40,7 @@
 </li>
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
 </li>
 <li><p>Eshaan Nichani (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -75,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-16 16:18:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-20 21:09:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
