--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -43,11 +43,32 @@
 <li><p>Reading: <a href="http://web.mit.edu/ehliu/Public/sclark/Golub%20G.H.,%20Van%20Loan%20C.F.-%20Matrix%20Computations.pdf">Matrix computations, Chapter 9</a></p>
 </li></ul>
 </li>
-<li><p><a href="lectures/tensor_decomposition.pdf">Tensor decomposition (last updated: 10/8)</a></p>
+<li><p><a href="lectures/tensor_decomposition.pdf">Tensor decomposition</a></p>
 <ul>
 <li><p>Reading: <a href="http://jmlr.org/papers/v15/anandkumar14b.html">Tensor decompositions for learning latent variable models</a></p>
 </li>
-<li><p>Reading: <a href="https://arxiv.org/abs/2012.08496">Spectral methods for data science: A statistical perspective (Section 3.9)</a>
+<li><p>Reading: <a href="https://arxiv.org/abs/2012.08496">Spectral methods for data science: A statistical perspective (Section 3.9)</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/randomized_linear_algebra.pdf">Randomized linear algebra</a></p>
+<ul>
+<li><p>Reading: <a href="https://arxiv.org/abs/1608.04481">Lecture notes on randomized linear algebra</a>
+
+
+
+
+
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<h2>Supplementary readings (not to be covered in class)</h2>
+<ul>
+<li><p><a href="lectures/sparse_representation.pdf">Sparse representation</a></p>
+<ul>
+<li><p>Reading: <a href="https://ieeexplore.ieee.org/document/959265">Uncertainty principles and ideal atomic decomposition</a>
 
 
 
@@ -61,10 +82,9 @@
 
 </li>
 </ul>
-<h2>Supplementary readings (not to be covered in class)</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-14 16:19:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-28 09:56:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
