--- a/Group.html
+++ b/Group.html
@@ -48,7 +48,7 @@
 </li>
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (Postdoc, co-advised with Jason Lee)</p>
 </li>
-<li><p>Wenhao Zhan (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
+<li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
@@ -75,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 13:26:42 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-08 22:05:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
