--- a/Workshops.html
+++ b/Workshops.html
@@ -45,7 +45,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 22:05:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
