--- a/Education.html
+++ b/Education.html
@@ -104,7 +104,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 22:04:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
