--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2022</h2>
 <ol>
+<li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Pessimistic Q-Learning for Offline Reinforcement Learning: Towards Optimal Sample Complexity</b> <br />
 L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2022. <a href="publications/Pessimistic_Qlearning.pdf">[paper]</a>
 </p>
@@ -242,7 +246,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 22:05:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
