--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 22:04:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
