--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-08 22:05:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
