--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -52,9 +52,17 @@
 </li>
 <li><p><a href="lectures/randomized_linear_algebra.pdf">Randomized linear algebra</a></p>
 <ul>
-<li><p>Reading: <a href="https://arxiv.org/abs/1608.04481">Lecture notes on randomized linear algebra</a>
-
-
+<li><p>Reading: <a href="https://arxiv.org/abs/1608.04481">Lecture notes on randomized linear algebra</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/compressed_sensing.pdf">Compressed sensing and sparse recovery</a></p>
+<ul>
+<li><p>Reading: <a href="https://statweb.stanford.edu/~candes/papers/ICM2014.pdf">Mathematics of sparsity (and a few other things)</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/phase_transition.pdf">Phase transition and convex geometry</a>  </p>
+<ul>
+<li><p>Reading: <a href="https://arxiv.org/abs/1303.6672">Living on the edge: Phase transitions in convex programs with random data</a>
 
 
 
@@ -84,7 +92,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 09:56:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-21 15:42:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
