--- a/stat991_math_data/index.html
+++ b/stat991_math_data/index.html
@@ -60,7 +60,7 @@ sparse recovery and compressed sensing, low-rank matrix recovery, nonconvex matr
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 09:56:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-21 15:42:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
