--- a/stat991_math_data/project.html
+++ b/stat991_math_data/project.html
@@ -159,7 +159,7 @@ C. Wei, K. Shen, Y. Chen, T. Ma, 2020. </p>
 <p><i>You have the freedom to select a paper of your own interest (especially more practical papers), as long as it is related to the topics of this course. </i></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 09:56:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-21 15:42:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
