--- a/stat991_math_data/reference.html
+++ b/stat991_math_data/reference.html
@@ -68,7 +68,7 @@ The following references also contain topics relevant to this course, and you mi
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-28 09:56:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-21 15:42:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
