--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
+    <li>Yuling has been awarded the prestigious Princeton Honorific Fellowship. Congratulations, Yuling!</li>
+</ul>
+<ul>
     <li>I received the <a href="https://sloan.org/fellowships/2022-Fellows">2022 Alfred P. Sloan Research Fellowship</a>.</li>
 </ul>
 <ul>
@@ -169,7 +172,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-14 16:40:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-04 14:08:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
