--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <h2>Selected recent papers</h2>
 <ul>
 <li><p><b>Reinforcement learning</b>
+</p>
+<ul>
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> 2022.
 
 
 
@@ -96,7 +99,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 
 
 </p>
-<ul>
+</li>
 <li><p>G. Li, Y. Wei, Y. Chi, Y. Gu,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> 2021 (accepted in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
@@ -172,7 +175,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-04 14:10:00 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-10 17:28:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
