--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -62,14 +62,17 @@
 </li>
 <li><p><a href="lectures/phase_transition.pdf">Phase transition and convex geometry</a>  </p>
 <ul>
-<li><p>Reading: <a href="https://arxiv.org/abs/1303.6672">Living on the edge: Phase transitions in convex programs with random data</a>
-
-
+<li><p>Reading: <a href="https://arxiv.org/abs/1303.6672">Living on the edge: Phase transitions in convex programs with random data</a></p>
+</li></ul>
+</li>
+<li><p><a href="lectures/matrix_recovery.pdf">Low-rank matrix recovery</a></p>
+<ul>
+<li><p>Reading: <a href="https://statweb.stanford.edu/~candes/papers/ICM2014.pdf">Mathematics of sparsity (and a few other things)</a></p>
+</li></ul>
+</li>
+<li><p>[lectures/robust_PCA.pdf Robust principal component analysis
 
 </p>
-</li>
-</ul>
-
 </li>
 </ul>
 <h2>Supplementary readings (not to be covered in class)</h2>
@@ -92,7 +95,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-21 15:42:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 10:07:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
