--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2022</h2>
 <ol>
+<li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  2022. <a href="publications/offline_modelbased.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
 Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/asyn_Q_pessimism.pdf">[paper]</a>
 </p>
@@ -246,7 +250,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-04 14:10:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-10 17:28:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
