--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -70,7 +70,7 @@
 <li><p>Reading: <a href="https://statweb.stanford.edu/~candes/papers/ICM2014.pdf">Mathematics of sparsity (and a few other things)</a></p>
 </li></ul>
 </li>
-<li><p>[lectures/robust_PCA.pdf Robust principal component analysis
+<li><p><a href="lectures/robust_PCA.pdf">Robust principal component analysis</a>
 
 </p>
 </li>
@@ -95,7 +95,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-11 10:07:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 12:38:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
