--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -70,9 +70,14 @@
 <li><p>Reading: <a href="https://statweb.stanford.edu/~candes/papers/ICM2014.pdf">Mathematics of sparsity (and a few other things)</a></p>
 </li></ul>
 </li>
-<li><p><a href="lectures/robust_PCA.pdf">Robust principal component analysis</a>
+<li><p><a href="lectures/robust_PCA.pdf">Robust principal component analysis</a></p>
+</li>
+<li><p>Nonconvex matrix factorization: <a href="http://www.princeton.edu/~yc5/slides/nonconvex_part_i.pdf">Part 1</a> and <a href="[http://www.princeton.edu/~yc5/slides/nonconvex_part_ii.pdf">Part 2</a></p>
+<ul>
+<li><p>Reading: <a href="https://arxiv.org/abs/1809.09573">Nonconvex optimization meets low-rank matrix factorization: An overview</a></p>
+</li>
+</ul>
 
-</p>
 </li>
 </ul>
 <h2>Supplementary readings (not to be covered in class)</h2>
@@ -95,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-11 12:38:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 13:00:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
