--- a/stat991_math_data/homework.html
+++ b/stat991_math_data/homework.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">ELE 520</div>
+<div class="menu-category">STAT 991-302</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="course_info.html">Course&nbsp;Info</a></div>
 <div class="menu-item"><a href="syllabus.html">Syllabus</a></div>
@@ -31,7 +31,7 @@
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-11 13:00:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 13:06:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
