--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -72,7 +72,7 @@
 </li>
 <li><p><a href="lectures/robust_PCA.pdf">Robust principal component analysis</a></p>
 </li>
-<li><p>Nonconvex matrix factorization: <a href="http://www.princeton.edu/~yc5/slides/nonconvex_part_i.pdf">Part 1</a> and <a href="[http://www.princeton.edu/~yc5/slides/nonconvex_part_ii.pdf">Part 2</a></p>
+<li><p>Nonconvex matrix factorization: <a href="lectures/nonconvex_part_i.pdf">Part 1</a> and <a href="lectures/nonconvex_part_ii.pdf">Part 2</a></p>
 <ul>
 <li><p>Reading: <a href="https://arxiv.org/abs/1809.09573">Nonconvex optimization meets low-rank matrix factorization: An overview</a></p>
 </li>
@@ -100,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-11 13:06:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11 13:09:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
