--- a/stat991_math_data/lectures.html
+++ b/stat991_math_data/lectures.html
@@ -75,9 +75,9 @@
 <li><p>Nonconvex matrix factorization: <a href="lectures/nonconvex_part_i.pdf">Part 1</a>, <a href="lectures/nonconvex_part_ii.pdf">Part 2</a>, <a href="lectures/nonconvex_part_iii.pdf">Part 3</a></p>
 <ul>
 <li><p>Reading: <a href="https://arxiv.org/abs/1809.09573">Nonconvex optimization meets low-rank matrix factorization: An overview</a></p>
+</li></ul>
 </li>
-</ul>
-
+<li><p>Reinforcement learning: <a href="lectures/RL_short_part1.pdf">Part 1</a>, <a href="lectures/RL_short_part1.pdf">Part 2</a></p>
 </li>
 </ul>
 <h2>Supplementary readings (not to be covered in class)</h2>
@@ -100,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-20 13:26:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-26 23:36:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
