--- a/Education.html
+++ b/Education.html
@@ -104,7 +104,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-14 15:26:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-28 15:49:52 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
