--- a/Publications_year.html
+++ b/Publications_year.html
@@ -69,7 +69,7 @@ L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2022. <a href="publications/Pessi
 </li>
 <li><p><b>MagNet: An Open-Source Database for Data-Driven Magnetic Core Loss Modeling</b> <br />
 H. Li, D. Serrano, T. Guillod, E. Dogariu, A. Nadler, S. Wang, M. Luo, V. Bansal, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
+IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://ieeexplore.ieee.org/abstract/document/9773372/">[paper]</a><a href="https://github.com/PrincetonUniversity/Magnet">[Github repo]</a><a href="https://mag-net.princeton.edu/">[website]</a></p>
 </li>
 </ol>
 <h2>2021</h2>
@@ -251,7 +251,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-14 15:26:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-28 15:49:53 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
