--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -35,6 +35,11 @@
 </script>
 <h1>Tutorials and Lecture Series</h1>
 <ol>
+<li><p><a href="slides/icassp2022_tutorial.pdf">Reinforcement Learning: Fundamentals, Algorithms, and Theory</a> <br /></p>
+<ol>
+<li><p>ICASSP 2022, together with Yuting Wei and Yuejie Chi</p>
+</li></ol>
+</li>
 <li><p>Statistical and algorithmic foundations of reinforcement learning <br /></p>
 <ol>
 <li><p>ICSA Applied Statistics Sympo- sium 2021, together with Yuting Wei, Yuejie Chi and Zhengyuan Zhou</p>
@@ -348,7 +353,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-28 15:51:22 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-06 22:43:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
