--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-28 15:51:22 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-06 22:43:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
