--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -42,7 +42,7 @@
 </li>
 <li><p>Statistical and algorithmic foundations of reinforcement learning <br /></p>
 <ol>
-<li><p>ICSA Applied Statistics Sympo- sium 2021, together with Yuting Wei, Yuejie Chi and Zhengyuan Zhou</p>
+<li><p>ICSA Applied Statistics Symposium 2021, together with Yuting Wei, Yuejie Chi and Zhengyuan Zhou</p>
 </li></ol>
 </li>
 <li><p><a href="slides/itw2018_tutorial.pdf">Taming nonconvexity in information science</a> <br /></p>
@@ -353,7 +353,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-06 22:43:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-06 22:45:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
