--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,6 +54,10 @@
 
 <h2>2022</h2>
 <ol>
+<li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, 2022. <a href="publications/model_based_offline_game.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Settling the Sample Complexity of Model-Based Offline Reinforcement Learning</b> <br />
 G. Li, L. Shi, <u>Y. Chen</u>,  Y. Chi, Y. Wei,  2022. <a href="publications/offline_modelbased.pdf">[paper]</a>
 </p>
@@ -251,7 +255,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-06 22:45:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-08 12:16:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
