--- a/Publications_year.html
+++ b/Publications_year.html
@@ -141,7 +141,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <h2>2019</h2>
 <ol>
-<li><p><b>Nonconvex Low-Rank Tensor Completion from Noisy Data</b> <br />  C. Cai, G. Li, H. V. Poor, <u>Y. Chen</u>, accepted to <i>Operations Research</i>, 2020 <a href="publications/NonconvexTC.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a>
+<li><p><b>Nonconvex Low-Rank Tensor Completion from Noisy Data</b> <br />  C. Cai, G. Li, H. V. Poor, <u>Y. Chen</u>, <i>Operations Research</i>, vol. 70, no. 2, pp. 1219–1237, 2022. <a href="publications/NonconvexTC.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexTC_NIPS.pdf">NeurIPS 2019</a>
 </p>
 </li>
@@ -255,7 +255,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-08 12:16:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-08 16:53:31 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
