--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi, Y. Gu,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> 2021 (accepted in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<li><p>G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> 2021 (accepted in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
+<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
 </p>
 </li>
 <li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> 2020 (accepted in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
+<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> 2020 (accepted in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
 
 
 </p>
@@ -175,7 +175,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-08 16:54:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-16 21:02:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
