--- a/Publications_year.html
+++ b/Publications_year.html
@@ -79,7 +79,7 @@ IEEE Applied Power Electronics Conference (APEC), 2022. <a href="https://ieeexpl
 <h2>2021</h2>
 <ol>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>,  Y. Gu, Y. Chi,  2021. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
+G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  2021. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021
 </p>
 </li>
@@ -95,14 +95,14 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, NeurIPS 2021. <a href="publication
 W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal contributions) <a href="https://arxiv.org/abs/2105.11066">[paper]</a> 
 </p>
 </li>
-<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  Y. Gu, H. V. Poor, <u>Y. Chen</u>,  2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
+<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>,  2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
 </p>
 </li>
-<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2021. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
+<li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>,  2021. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
 </p>
 </li>
-<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai,<u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi,    2021. <a href="publications/SyncQlearning.pdf">[paper]</a>
+<li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai, <u>Y. Chen</u>, Y. Wei, Y. Chi,    2021. <a href="publications/SyncQlearning.pdf">[paper]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SyncQlearning_ICML.pdf">ICML 2021</a> 
 </p>
 </li>
@@ -112,7 +112,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2020. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
+<li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi,  <u>Y. Chen</u>,  2020. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
 </p>
 </li>
@@ -255,7 +255,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-08 16:54:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-16 21:02:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
