--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
+    <li>Yanxi has won the <a href="https://icml.cc/virtual/2022/awards_detail"> 2022 ICML outstanding paper award</a> for <a href="https://proceedings.mlr.press/v162/chen22t.html"> his mixed LDS paper</a>. Congratulations, Yanxi!</li>
+</ul>
+<ul>
     <li>Yuling has been awarded the prestigious Princeton Honorific Fellowship, 2022. Congratulations, Yuling!</li>
 </ul>
 <ul>
@@ -70,9 +73,6 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <ul>
     <li><a href="publications/NPG_reg.pdf"> Our paper on natural policy gradient methods</a> was selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. Congratulations, Shicong and Chen!</li>
 </ul> 
-<ul>
-    <li>I received the 2021 Princeton SEAS junior faculty award.</li>
-</ul>
 <br>
 </p>
 </td></tr></table>
@@ -175,7 +175,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-16 21:26:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-19 20:10:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
